refactored register and login routes into users controller
