# api/controllers/users.js
@@ -1,5 +1,6 @@
 'use strict';
 
+const bcrypt = require('bcrypt-as-promised');
 const jwt = require('jsonwebtoken');
 
 function getAllUsers(req, res, next) {
@@ -126,10 +127,95 @@ function deleteUser(req, res) {
   });
 }
 
+function userRegistration(req, res){
+  const knex = require('../../knex.js');
+  bcrypt.hash(req.body.password, 1)
+  .then(result => {
+    const user = {
+      username: req.body.username,
+      email: req.body.email,
+      hashed_password: result
+    }
+    return knex('users').insert(user, '*');
+  })
+  .then(result => {
+    const newUser = result[0];
+    const claim = {
+      userId: newUser.id,
+      permissions: newUser.permissions
+    };
+    const userToken = jwt.sign(claim, process.env.JWT_KEY, {
+      expiresIn: '7 days',
+    });
+    const loggedInUser = {
+      id: newUser.id,
+      username:	newUser.username,
+      email:	newUser.email,
+      permissions:	newUser.permissions,
+      token:	userToken
+    }
+    res.status(200).json(loggedInUser);
+  })
+  .catch((err) => {
+    let errMessage = err.detail.slice(4).replace(/[{()}]/g, '').replace(/[=]/g, ' ');
+    res.status(400).json(errMessage);
+  })
+  .finally(() => {
+    // knex.destroy();
+  });
+}
+
+function userLogin(req, res){
+	const knex = require('../../knex.js');
+	knex('users')
+	.where('email', req.body.email)
+	.then(result => {
+		if (result.length === 0){
+			return res.status(400).json(`${req.body.email} is not a registered E-mail`);
+		} else {
+			const user = result[0];
+			return bcrypt.compare(req.body.password, user.hashed_password);
+		}
+	})
+	.catch(err => {
+		res.status(400).json(`The password you entered for ${req.body.email} is incorrect`);
+	})
+	.then(() => {
+		knex('users')
+		.where('email', req.body.email)
+		.then(result => {
+			const user = result[0];
+			const claim = {
+				userId: user.id,
+				permissions: user.permissions
+			};
+			const userToken = jwt.sign(claim, process.env.JWT_KEY, {
+				expiresIn: '7 days',
+			});
+			const loggedInUser = {
+				id: user.id,
+				username:	user.username,
+				email:	user.email,
+				permissions:	user.permissions,
+				token:	userToken
+			}
+			res.status(200).json(loggedInUser);
+		})
+		.catch((err) => {
+			console.error(err);
+		})
+		.finally(() => {
+			// knex.destroy();
+		})
+	});
+}
+
 module.exports = {
   getAllUsers: getAllUsers,
   getUser:  getUser,
   addUser:  addUser,
   updateUser: updateUser,
-  deleteUser: deleteUser
+  deleteUser: deleteUser,
+  userRegistration: userRegistration,
+  userLogin: userLogin
 }
